[package]
name = "aws-rust-cluster"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 0
incremental = false
panic = "abort"
opt-level = 3       # 0-3
strip = 'symbols'   # strip symbols from binary
lto = true          # enable link time optimization

[dependencies]
tokio = { version = ">=1.x", features = ["macros", "rt-multi-thread"] }
